odin/bindings.odin

    initDemon :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initSpider :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initLich :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initImp :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initGnome :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initDevil :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initAutomaton :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initCockatrice :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initCrystalgolem :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initScarab :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initKobold :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initShadow :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initVampire :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initIncubus :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initInsectoid :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initGoatman :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initLichFire :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initLichIce :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initSentryBot :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initGyroBot :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initDummyBot :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initMimic :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initBat :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initBugbear :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initMonsterD :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initMonsterM :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initMonsterS :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initMonsterG :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initRevenantSkull :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initAdorcisedWeapon :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initMiniMimic :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initFlameElemental :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initHologram :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initMoth :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initEarthElemental :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    initDuck :: proc "c" (my: ^Entity, myStats: ^Stat) ---
    actHumanLimb :: proc "c" (my: ^Entity) ---
    actGoblinLimb :: proc "c" (my: ^Entity) ---
    actScorpionTail :: proc "c" (my: ^Entity) ---
    actSuccubusLimb :: proc "c" (my: ^Entity) ---
    actTrollLimb :: proc "c" (my: ^Entity) ---
    actShopkeeperLimb :: proc "c" (my: ^Entity) ---
    actSkeletonLimb :: proc "c" (my: ^Entity) ---
    actMinotaurLimb :: proc "c" (my: ^Entity) ---
    actGhoulLimb :: proc "c" (my: ^Entity) ---
    actDemonLimb :: proc "c" (my: ^Entity) ---
    actSpiderLimb :: proc "c" (my: ^Entity) ---
    actLichLimb :: proc "c" (my: ^Entity) ---
    actImpLimb :: proc "c" (my: ^Entity) ---
    actGnomeLimb :: proc "c" (my: ^Entity) ---
    actDevilLimb :: proc "c" (my: ^Entity) ---
    actAutomatonLimb :: proc "c" (my: ^Entity) ---
    actCockatriceLimb :: proc "c" (my: ^Entity) ---
    actCrystalgolemLimb :: proc "c" (my: ^Entity) ---
    actKoboldLimb :: proc "c" (my: ^Entity) ---
    actShadowLimb :: proc "c" (my: ^Entity) ---
    actVampireLimb :: proc "c" (my: ^Entity) ---
    actIncubusLimb :: proc "c" (my: ^Entity) ---
    actInsectoidLimb :: proc "c" (my: ^Entity) ---
    actGoatmanLimb :: proc "c" (my: ^Entity) ---
    actScarabLimb :: proc "c" (my: ^Entity) ---
    actLichFireLimb :: proc "c" (my: ^Entity) ---
    actLichIceLimb :: proc "c" (my: ^Entity) ---
    actSentryBotLimb :: proc "c" (my: ^Entity) ---
    actGyroBotLimb :: proc "c" (my: ^Entity) ---
    actDummyBotLimb :: proc "c" (my: ^Entity) ---
    actMimicLimb :: proc "c" (my: ^Entity) ---
    actBatLimb :: proc "c" (my: ^Entity) ---
    actBugbearLimb :: proc "c" (my: ^Entity) ---
    actMonsterDLimb :: proc "c" (my: ^Entity) ---
    actMonsterMLimb :: proc "c" (my: ^Entity) ---
    actMonsterSLimb :: proc "c" (my: ^Entity) ---
    actMonsterGLimb :: proc "c" (my: ^Entity) ---
    actRevenantSkullLimb :: proc "c" (my: ^Entity) ---
    actMiniMimicLimb :: proc "c" (my: ^Entity) ---
    actAdorcisedWeaponLimb :: proc "c" (my: ^Entity) ---
    actFlameElementalLimb :: proc "c" (my: ^Entity) ---
    actHologramLimb :: proc "c" (my: ^Entity) ---
    actMothLimb :: proc "c" (my: ^Entity) ---
    actEarthElementalLimb :: proc "c" (my: ^Entity) ---
    actDuckLimb :: proc "c" (my: ^Entity) ---
    humanDie :: proc "c" (my: ^Entity) ---
    ratDie :: proc "c" (my: ^Entity) ---
    goblinDie :: proc "c" (my: ^Entity) ---
    slimeDie :: proc "c" (my: ^Entity) ---
    scorpionDie :: proc "c" (my: ^Entity) ---
    succubusDie :: proc "c" (my: ^Entity) ---
    trollDie :: proc "c" (my: ^Entity) ---
    shopkeeperDie :: proc "c" (my: ^Entity) ---
    skeletonDie :: proc "c" (my: ^Entity) ---
    minotaurDie :: proc "c" (my: ^Entity) ---
    ghoulDie :: proc "c" (my: ^Entity) ---
    demonDie :: proc "c" (my: ^Entity) ---
    spiderDie :: proc "c" (my: ^Entity) ---
    lichDie :: proc "c" (my: ^Entity) ---
    impDie :: proc "c" (my: ^Entity) ---
    gnomeDie :: proc "c" (my: ^Entity) ---
    devilDie :: proc "c" (my: ^Entity) ---
    automatonDie :: proc "c" (my: ^Entity) ---
    cockatriceDie :: proc "c" (my: ^Entity) ---
    crystalgolemDie :: proc "c" (my: ^Entity) ---
    scarabDie :: proc "c" (my: ^Entity) ---
    koboldDie :: proc "c" (my: ^Entity) ---
    shadowDie :: proc "c" (my: ^Entity) ---
    vampireDie :: proc "c" (my: ^Entity) ---
    incubusDie :: proc "c" (my: ^Entity) ---
    insectoidDie :: proc "c" (my: ^Entity) ---
    goatmanDie :: proc "c" (my: ^Entity) ---
    lichFireDie :: proc "c" (my: ^Entity) ---
    lichIceDie :: proc "c" (my: ^Entity) ---
    sentryBotDie :: proc "c" (my: ^Entity) ---
    gyroBotDie :: proc "c" (my: ^Entity) ---
    dummyBotDie :: proc "c" (my: ^Entity) ---
    mimicDie :: proc "c" (my: ^Entity) ---
    batDie :: proc "c" (my: ^Entity) ---
    bugbearDie :: proc "c" (my: ^Entity) ---
    monsterDDie :: proc "c" (my: ^Entity) ---
    monsterMDie :: proc "c" (my: ^Entity) ---
    monsterSDie :: proc "c" (my: ^Entity) ---
    monsterGDie :: proc "c" (my: ^Entity) ---
    revenantSkullDie :: proc "c" (my: ^Entity) ---
    miniMimicDie :: proc "c" (my: ^Entity) ---
    adorcisedWeaponDie :: proc "c" (my: ^Entity) ---
    flameElementalDie :: proc "c" (my: ^Entity) ---
    hologramDie :: proc "c" (my: ^Entity) ---
    mothDie :: proc "c" (my: ^Entity) ---
    earthElementalDie :: proc "c" (my: ^Entity) ---
    duckDie :: proc "c" (my: ^Entity) ---
    monsterAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    humanMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    ratAnimate :: proc "c" (my: ^Entity, dist: f64) ---
    goblinMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    slimeSetType :: proc "c" (my: ^Entity, myStats: ^Stat, sink: bool, rng: ^rawptr) ---
    slimeSprayAttack :: proc "c" (my: ^Entity) ---
    slimeAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    scorpionAnimate :: proc "c" (my: ^Entity, dist: f64) ---
    succubusMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    trollMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    shopkeeperMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    skeletonMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    minotaurMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    ghoulMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    demonMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    spiderMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    lichAnimate :: proc "c" (my: ^Entity, dist: f64) ---
    impMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    gnomeMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    devilMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    cockatriceMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    automatonMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    crystalgolemMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    scarabAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    koboldMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    shadowMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    vampireMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    incubusMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    insectoidMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    goatmanMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    lichFireAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    lichIceAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    sentryBotAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    gyroBotAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    dummyBotAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    mimicAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    batAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    bugbearMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    monsterDMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    monsterMMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    monsterSMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    monsterGMoveBodyparts :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    revenantSkullAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    hologramAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    mothGetAttackPose :: proc "c" (my: ^Entity, basePose: i32) -> i32 ---
    mothAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    earthElementalAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    duckAnimate :: proc "c" (my: ^Entity, myStats: ^Stat, dist: f64) ---
    duckSpawnFeather :: proc "c" (sprite: i32, x: f64, y: f64, z: f64, my: ^Entity) ---
    duckAreaQuck :: proc "c" (my: ^Entity) -> bool ---
    actMinotaurTrap :: proc "c" (my: ^Entity) ---
    getMinotaurTimeToArrive :: proc "c" () -> i32 ---
    actMinotaurTimer :: proc "c" (my: ^Entity) ---
    actMinotaurCeilingBuster :: proc "c" (my: ^Entity) ---
    actDemonCeilingBuster :: proc "c" (my: ^Entity) ---
    actDevilTeleport :: proc "c" (my: ^Entity) ---
    createMinotaurTimer :: proc "c" (entity: ^Entity, map_: ^map_t, seed: u32) ---
    actSummonTrap :: proc "c" (my: ^Entity) ---
    monsterCurve :: proc "c" (level: i32) -> i32 ---
    forceFollower :: proc "c" (leader: ^Entity, follower: ^Entity) -> bool ---
    limbAnimateToLimit :: proc "c" (limb: ^Entity, axis: i32, rate: f64, setpoint: f64, shake: bool, shakerate: f64) -> i32 ---
    limbAnimateWithOvershoot :: proc "c" (limb: ^Entity, axis: i32, setpointRate: f64, setpoint: f64, endpointRate: f64, endpoint: f64, dir: i32) -> i32 ---
    limbAngleWithinRange :: proc "c" (angle: f64, rate: f64, setpoint: f64) -> i32 ---
    normaliseAngle2PI :: proc "c" (angle: f64) -> f64 ---
    getTargetsAroundEntity :: proc "c" (my: ^Entity, originalTarget: ^Entity, distToFind: f64, angleToSearch: f64, searchType: i32, list: ^^list_t) ---
    numTargetsAroundEntity :: proc "c" (my: ^Entity, distToFind: f64, angleToSearch: f64, searchType: i32) -> i32 ---
    handleMonsterChatter :: proc "c" (monsterclicked: i32, ringconflict: bool, namesays: rawptr, my: ^Entity, myStats: ^Stat) -> bool ---
